--- a/view/frontend/web/template/checkout/cart/totals/cashondelivery.html
+++ b/view/frontend/web/template/checkout/cart/totals/cashondelivery.html
@@ -18,7 +18,7 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 -->
-<!-- ko if: canShowTotal() -->
+<!-- ko if: shouldDisplay() -->
 <tr class="totals msp_cashondelivery excl">
     <th class="mark" colspan="1" scope="row" data-bind="text: title"></th>
     <td class="amount">
