--- a/view/frontend/web/template/checkout/summary/cashondelivery.html
+++ b/view/frontend/web/template/checkout/summary/cashondelivery.html
@@ -18,11 +18,10 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 -->
-<!-- ko -->
+<!-- ko if: shouldDisplay() -->
 <tr class="totals msp_cashondelivery excl">
     <th class="mark" scope="row">
         <span class="label" data-bind="text: title"></span>
-        <span class="value" data-bind="text: getValue()"></span>
     </th>
     <td class="amount">
         <span class="price" data-bind="text: getValue(), attr: {'data-th': title}"></span>
