--- a/view/frontend/layout/sales_email_order_items.xml
+++ b/view/frontend/layout/sales_email_order_items.xml
@@ -19,16 +19,10 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 -->
-<config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/module.xsd">
-    <module name="MSP_CashOnDelivery" setup_version="1.2.4">
-        <sequence>
-            <module name="Magento_Sales" />
-            <module name="Magento_Payment" />
-            <module name="Magento_Directory" />
-            <module name="Magento_Config" />
-            <module name="Magento_Quote"/>
-            <module name="Magento_Checkout"/>
-        </sequence>
-    </module>
-</config>
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <body>
+        <referenceContainer name="order_totals">
+            <block class="MSP\CashOnDelivery\Block\Sales\Cashondelivery" name="msp_cashondelivery"/>
+        </referenceContainer>
+    </body>
+</page>
